app/assets/stylesheets/posts.scss
// All the styles related to the posts controller
.container {
	margin-top: 1rem;
}

img {
  margin-bottom: 1rem;
}

.map {
  height: 300px;
  width: 300px;
  background-size: cover;
  border: 1px solid rgb(90, 97, 103);
  border-radius: 7px;
  .arrow { margin: 50px 50px; }
  .wind-arrow { 
    z-index: 1; 
  }
  .wave-arrow { 
    position: relative;
    z-index: 2;
    top: -100%;
  }
}

.forecast { min-width: 350px; }
.surf-images { margin-left: -3px; }

canvas { 
  border: 1px solid #d9d9d9;  
  height: 70px !important;
}

.arrow-small { height: 25px; margin: 0 0; } 

// posts#index and pictures
i.fixed-bottom {
	right: 4%;
	left: initial;
	bottom: 2%;
}

